Create tables "Cinemas" and "Films"

--- a/CinemaProject.Angular/src/app/AdminPages/MainPage/header/header.component.html
+++ b/CinemaProject.Angular/src/app/AdminPages/MainPage/header/header.component.html
@@ -50,17 +50,24 @@
             type="button"
             class="btn btn-outline-primary me-2"
           >
-            Войти
+            Sign in
           </button>
         </div>
       </div>
       <div class="navbar-collapse collapse" id="navbarCollapse" style="">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Cinemas</a>
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="http://localhost:4200/admin/cinemas"
+              >Cinemas</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Films</a>
+            <a class="nav-link" href="http://localhost:4200/admin/films"
+              >Films</a
+            >
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Sessions</a>
