--- a/CinemaProject.Angular/src/app/AdminPages/MainPage/main/main.component.html
+++ b/CinemaProject.Angular/src/app/AdminPages/MainPage/main/main.component.html
@@ -1,4 +1,4 @@
 <app-admin-header></app-admin-header>
 <main class="d-flex container flex-column">
-  <app-table></app-table>
+  <app-table [service]="service"></app-table>
 </main>
