--- a/CinemaProject.Angular/src/app/AdminPages/MainPage/table/table.component.html
+++ b/CinemaProject.Angular/src/app/AdminPages/MainPage/table/table.component.html
@@ -9,7 +9,8 @@
 <ng2-smart-table
   [settings]="settings"
   [source]="source"
-  (createConfirm)="addCinema($event)"
-  (deleteConfirm)="deleteCinema($event)"
+  (createConfirm)="add($event)"
+  (deleteConfirm)="delete($event)"
+  (editConfirm)="edit($event)"
   class="mt-5"
 ></ng2-smart-table>
