--- a/CinemaProject.Angular/src/app/AdminPages/MainPage/custom/duration-picker/duration-picker.component.html
+++ b/CinemaProject.Angular/src/app/AdminPages/MainPage/custom/duration-picker/duration-picker.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex" style="background-color: rgba(0, 0, 0, 0.04); width: 100px">
+<div class="d-flex custom-duration-picker">
   <input
     matInput
     class="duration-input"
