Add Fields Validation
Field consists of spaces only. Field consists of numbers only. Session needs to start in future not in a past. Currency consists only numbers.

--- a/CinemaProject.Angular/src/app/AdminPages/MainPage/custom/currency-input/currency-input.component.html
+++ b/CinemaProject.Angular/src/app/AdminPages/MainPage/custom/currency-input/currency-input.component.html
@@ -11,6 +11,7 @@
       [placeholder]="cell.getTitle()"
       (click)="onClick.emit($event)"
       (keyup)="updateValue()"
+      (keypress)="validate($event)"
       (keydown.enter)="onEdited.emit($event)"
       (keydown.esc)="onStopEditing.emit()"
     />
