--- a/CinemaProject.Angular/src/app/AdminPages/MainPage/custom/modal/modal.component.html
+++ b/CinemaProject.Angular/src/app/AdminPages/MainPage/custom/modal/modal.component.html
@@ -9,7 +9,11 @@
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
-<form class="d-flex flex-column align-items-center" [formGroup]="formGroup">
+<form
+  *ngIf="typeOfEvent === 'Add TypeOfSeat' || typeOfEvent === 'Edit TypeOfSeat'"
+  class="d-flex flex-column align-items-center"
+  [formGroup]="formGroup"
+>
   <div class="d-flex justify-content-around w-100 mt-3">
     <div class="d-flex flex-column">
       <span class="mb-2">Name:</span>
@@ -69,19 +73,73 @@
     </div>
   </div>
   <button
-    *ngIf="typeOfEvent === 'Add'"
+    *ngIf="typeOfEvent === 'Add TypeOfSeat'"
     class="btn btn-primary m-3 w-25"
     [disabled]="!formGroup.valid"
-    (click)="add()"
+    (click)="addTypeOfSeat()"
   >
     Add new
   </button>
   <button
-    *ngIf="typeOfEvent === 'Edit'"
+    *ngIf="typeOfEvent === 'Edit TypeOfSeat'"
     class="btn btn-primary m-3 w-25"
     [disabled]="!formGroup.valid"
-    (click)="edit()"
+    (click)="editTypeOfSeat()"
   >
     Save
   </button>
 </form>
+<div *ngIf="typeOfEvent === 'Edit Amenities'">
+  <div *ngFor="let v of value" class="d-flex justify-content-around w-100 mt-3">
+    <section class="example-section">
+      <mat-checkbox
+        name="v.isChecked"
+        ngDefaultControl
+        class="example-margin"
+        [(ngModel)]="v.isChecked"
+        (change)="checkAmenity(v, $event)"
+      ></mat-checkbox>
+    </section>
+    <div class="d-flex flex-column">
+      <span class="mb-2">Name:</span>
+      {{ v.name }}
+    </div>
+    <div class="d-flex flex-column">
+      <span class="mb-2">Cost:</span>
+      {{ v.cost }}
+    </div>
+    <div class="d-flex flex-column">
+      <span class="mb-2">Extra Payment Percent (%):</span>
+      <div>
+        <mat-form-field class="example-form-field" appearance="fill">
+          <input
+            #inputValue
+            [(ngModel)]="v.extraPaymentPercent"
+            matInput
+            [placeholder]="placeholderExtraPaymentPercent"
+            type="number"
+            (keyup)="maxLengthForAmenities(v)"
+            (keydown)="maxLengthForAmenities(v)"
+            (focusout)="setZero(v)"
+            min="-100"
+            max="100000"
+            size="8"
+            (click)="onClick.emit($event)"
+            [disabled]="v.isChecked"
+          />
+        </mat-form-field>
+      </div>
+    </div>
+    <div class="d-flex flex-column w-15">
+      <span class="mb-2">Total:</span>
+      {{
+        (
+          parseFloat(v.cost) +
+          parseFloat(v.cost) * (v.extraPaymentPercent / 100)
+        ).toFixed(2)
+      }}
+      BYN
+    </div>
+  </div>
+  <div class="mt-4"></div>
+</div>
