Fixes with find elements by names
Data validation. Fixed problem with same names of cinemas in different cities.

--- a/CinemaProject.Angular/src/app/AdminPages/MainPage/custom/select-edit/select-edit.component.html
+++ b/CinemaProject.Angular/src/app/AdminPages/MainPage/custom/select-edit/select-edit.component.html
@@ -2,6 +2,7 @@
   <mat-label>{{ cell.getTitle() }}</mat-label>
   <div [formGroup]="formGroup">
     <mat-select
+      *ngIf="cell.getTitle() !== 'Cinema'"
       formControlName="value"
       [(ngModel)]="selectedValue"
       (selectionChange)="updateItem($event)"
@@ -9,6 +10,17 @@
       <mat-option *ngFor="let v of value" [value]="v.name">{{
         v.name
       }}</mat-option>
+    </mat-select>
+
+    <mat-select
+      *ngIf="cell.getTitle() === 'Cinema'"
+      formControlName="value"
+      [(ngModel)]="selectedValue"
+      (selectionChange)="updateItem($event)"
+    >
+      <mat-option *ngFor="let v of value" [value]="v.name"
+        >{{ v.name }}
+      </mat-option>
     </mat-select>
   </div>
   <div [hidden]="true" [innerHTML]="cell.getValue()" #htmlValue></div>
