--- a/CinemaProject.Angular/src/app/AdminPages/MainPage/custom/date-time-picker/date-time-picker.component.html
+++ b/CinemaProject.Angular/src/app/AdminPages/MainPage/custom/date-time-picker/date-time-picker.component.html
@@ -1,5 +1,5 @@
 <mat-form-field appearance="fill">
-  <mat-label>Choose a date</mat-label>
+  <mat-label>{{ labelText }}</mat-label>
   <div [formGroup]="formGroup">
     <input
       formControlName="value"
@@ -35,10 +35,20 @@
   <div [hidden]="true" [innerHTML]="cell.getValue()" #htmlValue></div>
 </mat-form-field>
 
-<mat-error *ngIf="formGroup.controls['value'].hasError('required')">
+<mat-error
+  *ngIf="
+    formGroup.controls['value'].hasError('required') &&
+    cell.getTitle() === 'Show Start'
+  "
+>
   <span>{{ cell.getTitle() }}</span> is <strong>required</strong>
 </mat-error>
 
-<mat-error *ngIf="formGroup.controls['value'].hasError('pastDatesValidator')">
+<mat-error
+  *ngIf="
+    formGroup.controls['value'].hasError('pastDatesValidator') &&
+    cell.getTitle() === 'Show Start'
+  "
+>
   <span>Session should be in <strong>future</strong></span>
 </mat-error>
