--- a/CinemaProject.Angular/src/app/AdminPages/MainPage/custom/select-edit/select-edit.component.html
+++ b/CinemaProject.Angular/src/app/AdminPages/MainPage/custom/select-edit/select-edit.component.html
@@ -25,6 +25,11 @@
   </div>
   <div [hidden]="true" [innerHTML]="cell.getValue()" #htmlValue></div>
 </mat-form-field>
-<mat-error *ngIf="formGroup.controls['value'].hasError('required')">
+<mat-error
+  *ngIf="
+    formGroup.controls['value'].hasError('required') &&
+    isAdded
+  "
+>
   <span>{{ cell.getTitle() }}</span> is <strong>required</strong>
 </mat-error>
