Create Authentication helpers

--- a/CinemaProject.Angular/src/app/AdminPages/MainPage/header/header.component.html
+++ b/CinemaProject.Angular/src/app/AdminPages/MainPage/header/header.component.html
@@ -37,20 +37,9 @@
               class="dropdown-menu text-small"
               aria-labelledby="dropdownUser1"
             >
-              <li><a class="dropdown-item" href="#">New project...</a></li>
-              <li><a class="dropdown-item" href="#">Settings</a></li>
-              <li><a class="dropdown-item" href="#">Profile</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Sign out</a></li>
+              <li><a class="dropdown-item" href="#" (click)="logOut()">Sign out</a></li>
             </ul>
           </div>
-          <button
-            routerLink="/auth"
-            type="button"
-            class="btn btn-outline-primary me-2"
-          >
-            Sign in
-          </button>
         </div>
       </div>
       <div class="navbar-collapse collapse" id="navbarCollapse">
