--- a/CinemaProject.Angular/src/app/UserPages/MainPage/header/header.component.html
+++ b/CinemaProject.Angular/src/app/UserPages/MainPage/header/header.component.html
@@ -8,27 +8,15 @@
         data-bs-toggle="dropdown"
         aria-expanded="false"
       >
-        parhimarsen@mail.ru
+        {{userName}}
       </a>
       <ul
         class="dropdown-menu text-small"
         aria-labelledby="dropdownUser1"
-        style=""
       >
-        <li><a class="dropdown-item" href="#">New project...</a></li>
-        <li><a class="dropdown-item" href="#">Settings</a></li>
-        <li><a class="dropdown-item" href="#">Profile</a></li>
-        <li><hr class="dropdown-divider" /></li>
-        <li><a class="dropdown-item" href="#">Sign out</a></li>
+        <li><a class="dropdown-item" href="#" (click)="logOut()">Sign out</a></li>
       </ul>
     </div>
-    <button
-      routerLink="/auth"
-      type="button"
-      class="btn btn-outline-primary me-2"
-    >
-      Войти
-    </button>
   </header>
 </div>
 <div class="search">
