--- a/CinemaProject.Angular/src/app/UserPages/MainPage/header/header.component.html
+++ b/CinemaProject.Angular/src/app/UserPages/MainPage/header/header.component.html
@@ -8,13 +8,12 @@
         data-bs-toggle="dropdown"
         aria-expanded="false"
       >
-        {{userName}}
+        {{ userName }}
       </a>
-      <ul
-        class="dropdown-menu text-small"
-        aria-labelledby="dropdownUser1"
-      >
-        <li><a class="dropdown-item" href="#" (click)="logOut()">Sign out</a></li>
+      <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+        <li>
+          <a class="dropdown-item" href="#" (click)="logOut()">Sign out</a>
+        </li>
       </ul>
     </div>
   </header>
