--- a/CinemaProject.Angular/src/app/UserPages/AuthorizationPage/auth-form/auth-form.component.html
+++ b/CinemaProject.Angular/src/app/UserPages/AuthorizationPage/auth-form/auth-form.component.html
@@ -3,7 +3,8 @@
     <div
       *ngIf="
         authFormComponent.isSessionExpired ||
-        authFormComponent.isWrongLoginorPassword
+        authFormComponent.isWrongLoginorPassword ||
+        authFormComponent.isEmailExist
       "
       class="error"
     >
@@ -13,7 +14,8 @@
         aria-label="Close"
         (click)="
           authFormComponent.isSessionExpired = false;
-          authFormComponent.isWrongLoginorPassword = false
+          authFormComponent.isWrongLoginorPassword = false;
+          authFormComponent.isEmailExist = false;
         "
       >
         <span aria-hidden="true">&times;</span>
@@ -21,6 +23,9 @@
       <p *ngIf="authFormComponent.isSessionExpired">Your session has expired</p>
       <p *ngIf="authFormComponent.isWrongLoginorPassword">
         Wrong Login or Password
+      </p>
+      <p *ngIf="authFormComponent.isEmailExist">
+        Account is already registered for this email
       </p>
     </div>
     <div class="contentHeader bd-example">
