--- a/CinemaProject.Angular/src/app/UserPages/AuthorizationPage/auth-form/auth-form.component.css
+++ b/CinemaProject.Angular/src/app/UserPages/AuthorizationPage/auth-form/auth-form.component.css
@@ -16,6 +16,7 @@ a{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 20px;
     margin-bottom: 20px;
 }
 
@@ -62,43 +63,6 @@ a{
     background-color: #fff;
     overflow: hidden;
     padding-bottom: 24px;
-}
-
-.form{
-    min-width: 100%;
-}
-
-.form-control{
-    padding: 12px 16px;
-    margin-top: 20px;
-}
-
-.formOptions{
-    display: flex;
-    justify-content: flex-end;
-    min-width: 100%;
-    margin: 16px 0 0 0;
-}
-
-.formOptions a{
-    color: #0095cc;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.button{
-    background-color: #1b8dfb;
-    height: 48px;
-    font-size: 15px;
-    font-weight: 500;
-    margin-top: 20px;
-    border-radius: 2px;
-    border: none;
-    color: #fff;
-    width: 100%;
-    cursor: pointer;
-    background-clip: padding-box;
-    appearance: none;
 }
 
 .socialBefore{
@@ -175,4 +139,75 @@ img, svg{
 
 .backButtonIcon svg{
     transform: rotate(180deg);
+}
+
+.error {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #eb273a;
+    width: 60%;
+    border-radius: 8px;
+    background-color: white;
+    margin-bottom: 10px;
+}
+
+.error p{
+    margin: 0;
+    padding: 0px 10px 15px 10px;
+}
+
+.close{
+    height: 50%;
+    border-radius: 8px;
+    align-self: flex-end;
+    border: 0;
+    background-color: white;
+}
+
+.close span{
+    font-size: 18px;
+}
+
+:host ::ng-deep .mat-form-field-flex {
+    width: 90% !important;
+    background-color: white;
+    padding: 0 !important;
+    border: 0;
+}
+
+:host ::ng-deep .mat-form-field-infix {
+    padding: 0 !important;
+}
+
+:host ::ng-deep .mat-form-field-wrapper {
+    margin-right: 0 !important;
+}
+
+:host ::ng-deep .mat-input-element {
+    width: 100% !important;
+    color: #212529;
+    border: 1px solid #ced4da;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    appearance: none;
+    border-radius: .25rem;
+    padding: 12px 16px !important;
+    box-sizing: border-box !important;
+}
+
+:host ::ng-deep .mat-input-element[aria-invalid="true"] {
+    border-color: #dc3545;
+}
+
+:host ::ng-deep .mat-error{
+    height: 20px;
+    color: #dc3545;
+}
+
+:host ::ng-deep .mat-form-field-underline{
+    width: 0%;
+    transform: scale3d(0, 0, 0) !important;
 }
